<resources>
    <string name="app_name">NiceBuy</string>
    <string name="no_notes">No notes yet</string>
    <string name="action_settings">Settings</string>
    <string name="menu_whatsapp">Enviar WhatsApp</string>
    <string name="menu_email">Send email</string>
    <string name="menu_sms">Send SMS</string>
    <string name="title">Nombre</string>
    <string name="ID">ID</string>

    <string name="body">Body</string>
    <string name="confirm">Confirm</string>
    <string name="edit_note">Edit Note</string>
    <string name="title_activity_note_edit">EditNote</string>

    // Nice Buy
    <string name="product_insert">Añadir producto</string>
    <string name="order_insert">Añadir pedido</string>
    <string name="menu_delete">Eliminar producto</string>
    <string name="menu_edit">Editar producto</string>
    <string name="order_delete">Eliminar pedido</string>
    <string name="order_edit">Editar pedido</string>
    <string name="descripcion">Descripcion</string>
    <string name="peso">Peso</string>
    <string name="precio">Precio</string>
    <string name="no_products">Sin productos</string>
    <string name="no_pedidos">Sin pedidos</string>
    <string name="add_product_pedido">Añadir productos al pedido</string>
    <string name="quantity_product_pedido">Elegir cantidad de producto</string>
    <string name="cantidad">Cantidad</string>
    <string name="change_quantity">Cambiar cantidad</string>
    <string name="telephone">Número de teléfono (+ código país)</string>
    <string name="date">Fecha límite (formato dd-mm-yyyy)</string>
    <string name="back">Volver</string>
    <string name="productos">Productos</string>
    <string name="pedidos">Pedidos</string>
    <string name="ver_productos">Ver los productos</string>
    <string name="ver_pedidos">Ver los pedidos</string>
    <string name="peso_total">Peso total:</string>
    <string name="precio_total">Precio total:</string>
    <string name="tests">Pruebas</string>

    <string name="order_name_asc">Ordenar por nombre (asc.)</string>
    <string name="order_name_desc">Ordenar por nombre (desc.)</string>
    <string name="order_price_asc">Ordenar por precio (asc.)</string>
    <string name="order_price_desc">Ordenar por precio (desc.)</string>
    <string name="order_weight_asc">Ordenar por peso (asc.)</string>
    <string name="order_weight_desc">Ordenar por peso (desc.)</string>



</resources>
